--- a/blank.html
+++ b/blank.html
@@ -145,12 +145,15 @@
 	</div>
 	{block:PermalinkPage}
 	<script>
-		// urlParams retrieved 8 May 2015 from http://stackoverflow.com/a/2880929/1274763 then minified
-		var urlParams;(window.onpopstate=function(){var r,a=/\+/g,n=/([^&=]+)=?([^&]*)/g,o=function(r){return decodeURIComponent(r.replace(a," "))},e=window.location.search.substring(1);for(urlParams={};r=n.exec(e);)urlParams[o(r[1])]=o(r[2])})();
+		// Wait for document ready
+		(function() {
+			// urlParams retrieved 8 May 2015 from http://stackoverflow.com/a/2880929/1274763 then minified
+			var urlParams;(window.onpopstate=function(){var r,a=/\+/g,n=/([^&=]+)=?([^&]*)/g,o=function(r){return decodeURIComponent(r.replace(a," "))},e=window.location.search.substring(1);for(urlParams={};r=n.exec(e);)urlParams[o(r[1])]=o(r[2])})();
 
-		// Go back to the index page the user was on before they clicked through to a permalink page
-		if (urlParams["page"])
-			document.getElementById("back").setAttribute("href", "/page/" + urlParams["p"]);
+			// Go back to the index page the user was on before they clicked through to a permalink page
+			if (urlParams["page"])
+				document.getElementById("back").setAttribute("href", "/page/" + urlParams["p"]);
+		})();
 	</script>
 	{/block:PermalinkPage}
 </body>
