Removed unnecessary quotes

--- a/blank.html
+++ b/blank.html
@@ -17,7 +17,7 @@
 	<style>
 		/* Generic */
 		body {
-			font-family: "Times", "Times New Roman", sans-serif;
+			font-family: Times, "Times New Roman", sans-serif;
 			background-color: {BackgroundColor};
 		}
 		iframe, img {
