Fixed infinite scroll link

--- a/blank.html
+++ b/blank.html
@@ -96,7 +96,7 @@
 	</style>
 
 	<!-- Scripts -->
-	<script src="http://codysherman.com/tools/infinite-scrolling/code"></script>
+	<script src="https://static.tumblr.com/q0etgkr/EIBmz7s0p/infinitescrolling.js"></script>
 </head>
 <body>
 	<header class="seo">
