More descriptive credits & formatting simplifications
Removed unnecessary comments, all links now HTTPS, more consistent & friendlier formatting, removed copyright declaration

--- a/blank.html
+++ b/blank.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<!-- Chandelier Blank - https://github.com/forlornhedgehog/chandelier -->
+	<!-- Theme: Chandelier Blank - https://github.com/forlornhedgehog/chandelier -->
 
 	<title>{Title}</title>
 	{block:Description}
@@ -12,7 +12,6 @@
 	<link rel="icon" href="{Favicon}">
 	<link rel="alternate" type="application/rss+xml" href="{RSS}">
 
-	<!-- Styles -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
 	<style>
 		/* Generic */
@@ -95,7 +94,6 @@
 		{CustomCSS}
 	</style>
 
-	<!-- Scripts -->
 	<script src="https://static.tumblr.com/q0etgkr/EIBmz7s0p/infinitescrolling.js"></script>
 </head>
 <body>
@@ -159,7 +157,6 @@
 		</div>
 	</div>
 	<script>
-		// Inspired by https://gist.github.com/edadams/6038781
 		function openInTumblrLightbox(obj) {
 			event.preventDefault();
 			Tumblr.Lightbox.init([{
