Fixed Tumblr controls styling

--- a/blank.html
+++ b/blank.html
@@ -75,12 +75,12 @@
 			article.post.answer > p.question {
 				font-weight: bold;
 			}
-			#tumblr_controls {
+			iframe.tmblr-iframe.iframe-controls--desktop {
 				-webkit-transition: all 0.2s ease-in-out;
 				-webkit-filter: invert(100%);
 				opacity: 0.5 !important;
 			}
-			#tumblr_controls:hover {
+			iframe.tmblr-iframe.iframe-controls--desktop:hover {
 				opacity: 0.8 !important;
 			}
 
