Corrected font-family fallback

--- a/blank.html
+++ b/blank.html
@@ -16,7 +16,7 @@
 		<style>
 			/* Generic */
 			body {
-				font-family: Times, "Times New Roman", sans-serif;
+				font-family: Times, "Times New Roman", serif;
 				background-color: {BackgroundColor};
 				-webkit-font-smoothing: antialiased;
 			}
