Remove redundant !important CSS declarations

--- a/blank.html
+++ b/blank.html
@@ -27,7 +27,7 @@
 				color: {AccentColor};
 			}
 			.hidden {
-				display: none !important;
+				display: none;
 			}
 
 			/* Specific */
@@ -78,10 +78,10 @@
 			iframe.tmblr-iframe.iframe-controls--desktop {
 				-webkit-transition: all 0.2s ease-in-out;
 				-webkit-filter: invert(100%);
-				opacity: 0.5 !important;
+				opacity: 0.5;
 			}
 			iframe.tmblr-iframe.iframe-controls--desktop:hover {
-				opacity: 0.8 !important;
+				opacity: 0.8;
 			}
 
 			/* Custom CSS */
